# delivery_managment

./: .gitignore  README.md  business_summary.md  pipfile  presentation_structure.md  pyproject.toml  solution_outline.drawio
results/: h3_clusters.json  run_output_v32.txt  summarize_optimization.json  time_optimized_routes.json  volume_optimized_routes.json  weight_optimized_routes.json
src/delivery_management/: crew.py  main.py
src/delivery_management/config/: agents.yaml
src/delivery_management/data/: fleets.json  geolocations.json  inventory.json  load_data.py  orders.json  time_constraints.json
src/delivery_management/models/: greedy_clusters.py  greedy_routes.py  optimized_routes.py  time_optimized_clusters.py
src/delivery_management/tasks/: create_routes.py  finetune_routes.py  summarize_optimizations.py  time_optimize_routes.py  volume_optimize_routes.py  weight_optimize_routes.py
src/delivery_management/tools/: cluster_orders.py  enrich_clustered_orders.py  enrich_final_output.py  fleet.py  optimization_collector.py  shared_data.py  time_constraints.py
tests/: test_cluster_orders_by_geo.py
tests/data/: fleets.json  geolocations.json  inventory.json  orders.json  regulatory_constraints.json  static_reference_data.json  time_constratints.json
