[project]
name = "delivery_management"
version = "0.1.0"
description = "delivery_management using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
delivery_management = "delivery_management.main:run"
run_crew = "delivery_management.main:run"
train = "delivery_management.main:train"
replay = "delivery_management.main:replay"
test = "delivery_management.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
